JoraSFDC/src/objects/Appointment__c.object
<CustomObject>
    <fields>
        <fullName>Appointment_Patient__c</fullName>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Appointment_Physician__c</fullName>
        <label>Physician</label>
        <referenceTo>Physician__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Confirmation_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmation Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Google_Calendar_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Google Calendar Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Appointment</label>
    <listViews>
        <fullName>Accupuncture</fullName>
        <columns>NAME</columns>
        <columns>Confirmation_Sent__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>End_Time__c</columns>
        <columns>Google_Calendar_Updated__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Appointment_Patient__c</columns>
        <columns>Appointment_Physician__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Start_Time__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Appointment_Physician__c</field>
            <operation>contains</operation>
            <value>vasea</value>
        </filters>
        <label>Accupuncture</label>
    </listViews>
    <listViews>
        <fullName>Accupuncturist1_List</fullName>
        <columns>NAME</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Appointment_Patient__c</columns>
        <columns>Confirmation_Sent__c</columns>
        <columns>Google_Calendar_Updated__c</columns>
        <columns>Appointment_Physician__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appointment_Physician__c</field>
            <operation>equals</operation>
            <value>Accupuncturist1</value>
        </filters>
        <label>Accupuncturist1 List</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Natasha</fullName>
        <columns>NAME</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Appointment_Patient__c</columns>
        <columns>Confirmation_Sent__c</columns>
        <columns>Google_Calendar_Updated__c</columns>
        <columns>Appointment_Physician__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appointment_Physician__c</field>
            <operation>contains</operation>
            <value>Natasha</value>
        </filters>
        <label>Natasha</label>
    </listViews>
    <nameField>
        <displayFormat>Appt-{0000}</displayFormat>
        <label>Appointment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>